chore: fixing some spacing issues

--- a/src/card/card.css
+++ b/src/card/card.css
@@ -14,6 +14,17 @@
 .top {
 	text-align: center;
 }
+
+.middle {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	height: 360px;
+}
+
+.price {
+	line-height: 0;
+}
 .subscribe-button {
 	height: 40px;
 	width: 200px;
@@ -25,6 +36,7 @@
 	color: #fff;
 	box-shadow: 0px 4px 8px 0px #07d1e8;
 	cursor: pointer;
+	margin-bottom: 16px;
 }
 
 .bottom {
